 - Added init(Context, Request, Response) method and default constructor to Resource.
 - Finder now looks for a default Resource constructor if the current one (with 3 args) couldn't be found.
   Suggested by Diggory Briercliffe, Brandon Lonac, Sean Landis and Ryan Daum.
 - Added Application.KEY string constant containing the reseverved application attribute key.
  
[Enhancements] 
 - Updated FreeMarker to version 2.3.9.
 
1.0 RC3 (2007-01-19)
[Bugs fixed]
 - Fixed bug with the uri parsing in the DirectoryResource class. The query part of the resource uri
   is removed before sending request to the file connector.
 - The content negotiation was throwing class cast exceptions when a resource was 
   returning simple Variant instance via getVariants().
 - Fixed potential NPE in HttpRequest due to autoboxing. Reported by Valdis Rigdon.
 - Fixed bug preventing the Jetty connector from returning error status representations.
 - Fixed bug in DomRepresentation when outputting an instance based on a XML representation.
 - Fixed bug in Jetty connector potentially trying to send a response twice. Reported by
   Diggory Briercliffe.
 - VirtualHost now always set the rootRef, even if the attached Restlet isn't an Application.
 - Fixed bug in HttpRequest constructor in case the path of the URI starts with "//". Reported by
   Vincent Lari.

[API changes]
 - Added ReferenceList.getWebRepresentation() method, using exsiting logic from Directory.
 - Deprecated Directory.getDirectoryVariants() method and added getIndexVariants() + 
   getIndexRepresentation() method to follow recent refactoring in Resource.
 - ClientInfo.port and ServerInfo.port are now 'int' instead of 'Integer' to prevent autoboxing issues.
 - Added getStatus(Method, Variant) and hasSome() methods to Conditions. Logic moved from private Handler methods.
 - Added Guard.getSecret() method for easier customization of the authentication system.